[gd_scene load_steps=24 format=2]

[ext_resource path="res://bottle.gd" type="Script" id=1]
[ext_resource path="res://Pong Remake Assets/Futura Std Medium Condensed - Copy.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://bedroom.png" type="Texture" id=3]
[ext_resource path="res://CherryPop.png" type="Texture" id=4]
[ext_resource path="res://Pong.gd" type="Script" id=5]
[ext_resource path="res://Pong Remake Assets/bump.wav" type="AudioStream" id=6]
[ext_resource path="res://ScreenShake.gd" type="Script" id=7]
[ext_resource path="res://Pong Remake Assets/Kid.png" type="Texture" id=8]
[ext_resource path="res://trail.tscn" type="PackedScene" id=9]
[ext_resource path="res://kid.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Curve" id=7]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="Curve" id=9]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="Curve" id=11]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
flag_disable_z = true
direction = Vector3( 3, 3, 0 )
spread = 180.0
flatness = 1.0
gravity = Vector3( -1, -1, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
angular_velocity = -720.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 1.0
linear_accel_random = 1.0
linear_accel_curve = SubResource( 8 )
radial_accel = 9.45
radial_accel_random = 1.0
radial_accel_curve = SubResource( 10 )
tangential_accel = 7.87
tangential_accel_random = 1.0
tangential_accel_curve = SubResource( 12 )
damping = 100.0
damping_random = 1.0
angle = 720.0
angle_random = 1.0
scale = 3.0
scale_random = 1.0
color = Color( 1, 0, 0, 1 )
hue_variation = -1.0
hue_variation_random = 1.0

[sub_resource type="Curve" id=5]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
lifetime_randomness = 1.0
trail_size_modifier = SubResource( 4 )
emission_shape = 1
emission_sphere_radius = 22.53
flag_disable_z = true
direction = Vector3( 3, 10, 0 )
spread = 18.07
flatness = 0.14
gravity = Vector3( 0, -4, 0 )
initial_velocity = 4.0
initial_velocity_random = 1.0
angular_velocity = 4.0
angular_velocity_random = 1.0
angular_velocity_curve = SubResource( 6 )
orbit_velocity = 1.0
orbit_velocity_random = 0.5
scale = 4.0
scale_random = 0.5
color = Color( 0, 0.415686, 1, 1 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="pong_game (root)" type="Node2D"]
script = ExtResource( 5 )

[node name="Candytimer" type="RichTextLabel" parent="."]
margin_left = 47.3867
margin_top = 7.85052
margin_right = 361.387
margin_bottom = 47.8505
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kid" type="Sprite" parent="."]
position = Vector2( 109.284, 71.9054 )
scale = Vector2( 1.16164, 1.69205 )
texture = ExtResource( 8 )
script = ExtResource( 10 )
wrapArea = Rect2( 0, 0, 1024, 600 )

[node name="Line2D" parent="kid" instance=ExtResource( 9 )]
points = PoolVector2Array( 0.494476, -4.05659 )
trail_length = 40

[node name="Particles2D" type="Particles2D" parent="kid"]
show_behind_parent = true
amount = 22
process_material = SubResource( 13 )

[node name="candyscore" type="RichTextLabel" parent="."]
margin_left = 323.708
margin_top = 3.99998
margin_right = 632.708
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bounce" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 6.70807, 10.6664 )
stream = ExtResource( 6 )

[node name="bottle" type="Sprite" parent="."]
position = Vector2( 433.818, 63.8441 )
scale = Vector2( 1.05902, 1.49126 )
texture = ExtResource( 4 )
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="bottle"]
show_behind_parent = true
amount = 60
speed_scale = 2.5
process_material = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
margin_left = 3.0
margin_top = 7.0
margin_right = 637.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bedroom" type="Sprite" parent="."]
position = Vector2( 330.717, 212.269 )
scale = Vector2( 1.98588, 2.0333 )
z_index = -100
texture = ExtResource( 3 )

[node name="ScreenShake" type="Node2D" parent="."]
position = Vector2( 328.058, 205.487 )
script = ExtResource( 7 )

[node name="ShakeTween" type="Tween" parent="ScreenShake"]

[node name="Frequency" type="Timer" parent="ScreenShake"]
wait_time = 1.244

[node name="Duration" type="Timer" parent="ScreenShake"]
wait_time = 0.497
one_shot = true

[node name="maincamera" type="Camera2D" parent="ScreenShake"]
position = Vector2( -3.87704, 2.5847 )
current = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ScreenShake/Frequency" to="ScreenShake" method="_on_Frequency_timeout"]
[connection signal="timeout" from="ScreenShake/Duration" to="ScreenShake" method="_on_Duration_timeout"]
